# libvmod-example

./: CHANGES.rst  README.rst  configure.ac
src/: Makefile.am  test.vcl  vmod_hiring.c  vmod_hiring.vcc
src/tests/: test01.vtc  test02.vtc
